# sendhub

./: Cargo.toml  Dockerfile  README.md  devDockerfile  docker-compose.yml
src/: main.rs  utils.rs
src/app/: email.rs  mod.rs  slack.rs
src/env/: config.rs  development.rs  docker.rs  local.rs  mod.rs  production.rs
src/provider/: client.rs  mailgun.rs  mod.rs  sendgrid.rs  ses.rs
src/webhook/: client.rs  mod.rs  slack.rs
templates/: hello.html  hello.text
